# BA-Modding-Toolkit-Web

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  plan.md  start-prod.cmd  start-prod.ps1  supervisord.conf
.github/workflows/: docker-publish.yml  docker-test.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: __init__.py  database.py  file.py  schemas.py  session.py  task.py
backend/app/routers/: files.py  session.py  tasks.py  version.py
backend/app/services/: cli_runner.py  file_service.py  session_service.py  task_service.py
backend/app/utils/: cleanup.py
docs/: README.zh-CN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  i18n.js  main.js
frontend/src/api/: files.js  index.js  session.js  tasks.js  version.js
frontend/src/components/: FileUpload.vue  Footer.vue  NavBar.vue  TaskStatus.vue
frontend/src/locales/: ar-SA.json  bn-BD.json  en-US.json  es-ES.json  fr-FR.json  hi-IN.json  ja-JP.json  ko-KR.json  ru-RU.json  th-TH.json  zh-CN.json  zh-TW.json
frontend/src/pages/: Crc.vue  Extract.vue  Home.vue  Pack.vue  Tasks.vue  Update.vue
frontend/src/router/: index.js
frontend/src/stores/: session.js  tasks.js
frontend/src/styles/: main.css
frontend/src/utils/: uuid.js
